@@ -1,3 +1,12 @@
+2008-04-20  Sriram Neelakandan  <sriram.neelakandan@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        Implement FileSystemGtk's getFileModificationTime() with GLib.
+
+        * platform/gtk/FileSystemGtk.cpp:
+        (WebCore::getFileModificationTime):
+
 2008-04-20  Christian Persch  <chpe@gnome.org>
 
         Reviewed by Alp Toker.
